--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             };
 
             try {
-                const response = await fetch(GOOGLE_APPS_SCRIPT_URL, {
+                const response = await fetch(https://floral-sun-acc2.roger-c16.workers.dev, {
                     method: 'POST',
                     mode: 'no-cors', // 必須使用 no-cors 模式，因為 Apps Script 預設不支援 CORS
                     headers: {
